# ProjetElection

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  election.c  election.h  main.c  smart.glade.bak  smart.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c
